added double and triple letter buttons to word display

--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -5,3 +5,13 @@
     border-radius: 10%;
     background-color: blanchedalmond;
 }
+
+#letter-layout {
+    display: flex;
+    justify-content: center;
+}
+
+#letter-button-layout {
+    display: flex;
+    flex-direction: column;
+}
