--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -1,3 +1,9 @@
+#display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #display-button {
     margin: 0.5em;
     height: 5em;
@@ -43,6 +49,20 @@
     width: 5em;
     border-radius: 0.4em;
     background-color: #6c75f3;  
+}
+
+#double-word-button {
+height: 2em;
+margin: 0.3em;
+border-radius: 0.4em;
+background-color: rgb(247, 228, 65);
+}
+
+#triple-word-button {
+height: 2em;
+margin: 0.3em;
+border-radius: 0.4em;
+background-color: red;
 }
 
 .score-mode {
