fixed player table issue and make turn text conditionally render

--- a/src/components/Players/players.css
+++ b/src/components/Players/players.css
@@ -1,12 +1,5 @@
-/* .table {
-    width: 30vw;
-    height: 40vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    } */
-    
     table {
+    margin-top: 1em;
     border: 2px solid forestgreen;
     width: 800px;
     height: 200px;
