--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  /* box-sizing: border-box; */
+}
+
 .App {
   text-align: center;
   background-color: rgb(252, 252, 212);
@@ -39,6 +44,12 @@
 }
 
 #title {
+  margin-bottom: 0.2em;
   font-size: 3em;
+  color: #06471f;
+}
+
+#motto {
+  margin-bottom: 1em;
   color: #06471f;
 }
