--- a/src/components/Buttons/buttons.css
+++ b/src/components/Buttons/buttons.css
@@ -3,6 +3,6 @@
     height: 3em;
     width: 3em;
     border-radius: 0.4em;
-    background-color: #e6caa2;
-    color: #023a12;
+    background-color: var(--cream);
+    color: var(--green2);
 }
