--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--green2);
 }
 
 #display-button {
@@ -9,8 +10,8 @@
     height: 5em;
     width: 5em;
     border-radius: 0.4em;
-    background-color: #e6caa2;
-    color: #023a12; 
+    background-color: var(--cream);
+    color: var(--green2); 
     box-shadow: 4px 4px 4px 1px rgba(0,0,0,0.39);
 }
 
@@ -35,6 +36,7 @@
 .checkboxes {
     margin-left: 0.3em;
     font-size: 0.9em;
+    color: var(--white);
 }
 
 #double-letter-button {
@@ -43,7 +45,7 @@
     height: 2em;
     width: 5em;
     border-radius: 0.4em;
-    background-color: #6cc8f3; 
+    background-color: var(--blue1); 
 }
 #triple-letter-button {
     margin-left: 0.5em;
@@ -59,13 +61,14 @@ height: 2em;
 margin: 0.3em;
 border-radius: 0.4em;
 background-color: rgb(247, 228, 65);
+/* background-color: var(--cream); */
 }
 
 #triple-word-button {
 height: 2em;
 margin: 0.3em;
 border-radius: 0.4em;
-background-color: red;
+background-color: var(--red);
 }
 
 #remove-button {
@@ -100,4 +103,9 @@ background-color: red;
 
 .score-mode {
     height: 3em;
+    color: var(--white)
+}
+
+#word-score {
+    color: var(--white);
 }
