--- a/src/components/Instructions/instructions.css
+++ b/src/components/Instructions/instructions.css
@@ -1,43 +1,79 @@
 #instructions {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    color: var(--white);
-    font-size: 1em;
-    max-height: 2em;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: var(--white);
+  font-size: 1em;
+  max-height: 2em;
 }
 
 #instructions-container {
-    text-align: left;
-    background-color: var(--cream);
-    color: var(--green2);
-    height: fit-content;
-    width: 30vw;
-    margin: 1em 0 0 1em;
-    border-radius: 0.5em;
-    padding: 1em;
-    z-index: 10;
+  text-align: left;
+  background-color: var(--cream);
+  color: var(--green2);
+  height: fit-content;
+  width: 30vw;
+  margin: 1em 0 0 1em;
+  border-radius: 0.5em;
+  padding: 1em;
+  z-index: 10;
 }
 #instructions-container2 {
-    align-self: flex-end;
-    text-align: left;
-    background-color: var(--cream);
-    color: var(--green2);
-    height: fit-content;
-    width: 30vw;
-    margin: 1em 1em 0 0;
-    border-radius: 0.5em;
-    padding: 1em;
-    z-index: 10;
+  align-self: flex-end;
+  text-align: left;
+  background-color: var(--cream);
+  color: var(--green2);
+  height: fit-content;
+  width: 30vw;
+  margin: 1em 1em 0 0;
+  border-radius: 0.5em;
+  padding: 1em;
+  z-index: 10;
 }
 
 #instructions-list {
-    list-style: none;
-    margin-left: -1em;
+  list-style: none;
+  margin-left: -1em;
 }
 
 .instruction-head {
-    color: black;
-    margin: 0.2em 0;
+  color: black;
+  font-weight: 700;
+  margin: 0.2em 0;
 }
+
+#instruction-player-button {
+  height: 2em;
+  min-width: 4em;
+  margin: 0.3em;
+  border-radius: 0.4em;
+  border-color: var(--white);
+  /* background-color: rgb(255, 153, 0);   */
+  background-color: var(--blue2);
+  color: var(--white);
+}
+
+/* #instructions-letter-buttons {
+  margin: 0.2em;
+  height: 3em;
+  width: 3em;
+  border-radius: 0.4em;
+  background-color: var(--cream);
+  color: var(--green2);
+  font-weight: 800;
+}
+
+#instructions-double-word-button {
+  height: 2em;
+  margin: 0.3em;
+  border-radius: 0.4em;
+  background-color: rgb(247, 228, 65);
+}
+
+#instructions-triple-word-button {
+  height: 2em;
+  margin: 0.3em;
+  border-radius: 0.4em;
+  background-color: var(--red);
+} */
