--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -72,6 +72,13 @@
   background-color: var(--red);
 }
 
+.all-tiles-button {
+  height: 2em;
+  margin: 0.3em;
+  border-radius: 0.4em;
+  background-color: var(--blue1);
+}
+
 .remove-button {
   height: 2em;
   width: 5em;
