--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -16,6 +16,17 @@
   box-shadow: 4px 4px 4px 1px rgba(0, 0, 0, 0.39);
 }
 
+/* @media only screen and (max-width: 500px) {
+  #display-button {
+    scale: 0.6;
+    margin: 0.2em;
+  }
+  .remove-button {
+    scale: 0.8;
+  }
+  
+} */
+
 #letter-layout {
   display: flex;
   justify-content: center;
@@ -110,7 +121,8 @@
 }
 
 .score-mode {
-  height: 3em;
+  height: 5em;
+  margin: 0.5em 0;
   color: var(--white);
 }
 
