--- a/src/components/Players/players.css
+++ b/src/components/Players/players.css
@@ -2,6 +2,7 @@
   background-color: var(--green2);
 }
 
+
 table {
   background-color: var(--green1);
   margin: 1em 0 1em 0;
@@ -10,6 +11,12 @@ table {
   height: auto;
   color: var(--white);
   font-size: 1.1em;
+}
+@media only screen and (max-width: 500px) {
+  table {
+    margin-left: 30%;
+  }
+  
 }
 
 thead tr td {
