--- a/src/components/Players/players.css
+++ b/src/components/Players/players.css
@@ -12,9 +12,10 @@ table {
   color: var(--white);
   font-size: 1.1em;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 800px) {
   table {
-    margin-left: 30%;
+    width: 60vw;
+    margin-left: 20%;
   }
   
 }
