--- a/src/components/Buttons/buttons.css
+++ b/src/components/Buttons/buttons.css
@@ -8,6 +8,13 @@
   font-weight: 800;
 }
 
+#letter-button-con {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 90vw;
+}
+
 @media only screen and (max-width: 500px) {
   #letter-button-con {
     width: 95vw;
