fixed letter alignment on small screens

--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -165,6 +165,9 @@
 
   #letters {
     font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-content: center;
   }
 
   .remove-button {
