fixed excess page width

--- a/src/components/Players/players.css
+++ b/src/components/Players/players.css
@@ -3,7 +3,9 @@
 }
 
 #table-container {
-  width: 100vw;
+  width: 95vw;
+  align-self: center;
+  justify-self: center;
   display: flex;
   justify-content: center;
 }
